data/derived/fa15/progs/unify/prog1673.ml.out
Characters 89-119:
  |Sine s -> String.concat("sin(pi*",exprToString s,")")
                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type string
